<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/voiceBtn"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/med_green"
        android:text="@string/add_by_voice"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/medicineName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/medicine_name"
        android:padding="14dp" />

    <EditText
        android:id="@+id/reminderTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/reminder_time"
        android:inputType="number"
        android:padding="14dp" />

    <Button
        android:id="@+id/saveReminderBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/med_green"
        android:text="@string/save_reminder"
        android:textColor="@android:color/white" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_white"
        app:itemIconTint="@color/primary_blue"
        app:itemTextColor="@color/primary_blue"
        app:menu="@menu/bottom_nav_menu"/>
</LinearLayout>
